# polymarket-autotrader

./: Cargo.toml  README.md  config.json
src/: clob.rs  config.rs  executor.rs  main.rs  positions.rs  risk.rs  scanner.rs  strategy.rs  telegram.rs
