[package]
name = "polymarket-autotrader"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client  
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Decimal math
rust_decimal = "1"
rust_decimal_macros = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenv = "0.15"

# Error handling
anyhow = "1"
thiserror = "2"

# Async streams
futures = "0.3"

# UUID for trade IDs
uuid = { version = "1", features = ["v4"] }

# Wallet signing and CLOB API
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }
tiny-keccak = { version = "2", features = ["keccak"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
